--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,13 @@
 ---
 layout: default
 ---
-<div class="post">
-
+<div class="post container compact">
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
+</div>
 
-  <article class="post-content">
-    {{ content }}
-  </article>
 
+<div class="page-content">
+	{{ content }}
 </div>
