moved bootstrap files to dedicated folder, fixed css imports, changed compact grid class to use bootstrap functions and removed redundant layout classes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,10 @@
   <body>
 
     {% include header.html %}
-
-    {{ content }}
+    
+    <div class="container m-b-lg">
+      {{ content }}
+    </div>
 
     {% include foot.html %}
     {% include footer.html %}
