--- a/css/base.scss
+++ b/css/base.scss
@@ -7,5 +7,6 @@
         //"base",
         //"layout",
         //"syntax-highlighting",
-        "bootstrap"
+        "bootstrap/bootstrap",
+        "project-flamingo"
 ;
