--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,13 +1,12 @@
 ---
 layout: default
 ---
-<div class="post container compact">
+<div class="page compact">
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
-</div>
-
-
-<div class="page-content">
-	{{ content }}
+  
+  <div class="page-content">
+  	{{ content }}
+  </div>
 </div>
