--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,11 +2,15 @@
 layout: default
 ---
 <div class="page compact">
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+
+	{% include subnavs.html %}
+
+	<header class="post-header">
+		<h1 class="post-title">{{ page.title }}</h1>
+	</header>
+
   
-  <div class="page-content">
-  	{{ content }}
-  </div>
+	<div class="page-content">
+		{{ content }}
+	</div>
 </div>
