--- a/_sass/project-flamingo.scss
+++ b/_sass/project-flamingo.scss
@@ -9,3 +9,14 @@
     @include make-col-push(2);
   }
 }
+.no-gutter > [class*='col-'] {
+    padding-right:0;
+    padding-left:0;
+}
+
+h5 {
+	font-size:16px;
+	font-weight:bold;
+	text-transform:uppercase;
+	letter-spacing:1px;
+}
