Fixed nav. Breaks nav out of container.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<nav  class="navbar navbar-light">
-  <div class="container">
+<nav  class="navbar navbar-light navbar-fixed-top bg-faded p-t-0 p-b-0 " style="background:#fff; border-bottom:1px solid rgba(0,0,0,0.1);">
+  <div class="no-container">
 
     <a class="navbar-brand" href="{{ site.baseurl }}/">
       <img src="{{ site.baseurl }}/assets/logo-full-color.png" alt="{{ site.title }}" />
