Adds content for all existing pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,9 @@
       {% endfor %}
 
     <li class="nav-item">
-      <button class="btn btn-primary" type="signin">Sign In</button>
+      <button class="btn btn-primary" type="signin">Apply Now</button>
+
+      <button class="btn btn-secondary" type="signin">Log In</button>
     </li>
     </ul>
 
