--- a/_includes/subnavs.html
+++ b/_includes/subnavs.html
@@ -4,8 +4,8 @@
 	      {% for p in site.pages %}
 	      	{% if p.parent == 'company' %}
 		        {% if p.weight == weight %}
-		        <li class="nav-item{% if p.url == page.url %} active{% endif %}">
-		          <a class="nav-link" href="{{ p.url }}">{{ p.title }}</a>
+		        <li class="nav-item">
+		          <a class="nav-link {% if p.url == page.url %} active{% endif %}" href="{{ p.url }}">{{ p.title }}</a>
 		        </li>
 		        {% endif %}
 	      	{% endif %}
@@ -22,8 +22,8 @@
 	      {% for p in site.pages %}
 	      	{% if p.parent == 'payoff-products' %}
 		        {% if p.weight == weight %}
-		        <li class="nav-item{% if p.url == page.url %} active{% endif %}">
-		          <a class="nav-link" href="{{ p.url }}">{{ p.title }}</a>
+		        <li class="nav-item">
+		          <a class="nav-link {% if p.url == page.url %} active{% endif %}" href="{{ p.url }}">{{ p.title }}</a>
 		        </li>
 		        {% endif %}
 	      	{% endif %}
@@ -40,8 +40,8 @@
 	      {% for p in site.pages %}
 	      	{% if p.parent == 'why-it-matters' %}
 		        {% if p.weight == weight %}
-		        <li class="nav-item{% if p.url == page.url %} active{% endif %}">
-		          <a class="nav-link" href="{{ p.url }}">{{ p.title }}</a>
+		        <li class="nav-item">
+		          <a class="nav-link {% if p.url == page.url %} active{% endif %}" href="{{ p.url }}">{{ p.title }}</a>
 		        </li>
 		        {% endif %}
 	      	{% endif %}
@@ -58,8 +58,8 @@
 	      {% for p in site.pages %}
 	      	{% if p.parent == 'support' %}
 		        {% if p.weight == weight %}
-		        <li class="nav-item{% if p.url == page.url %} active{% endif %}">
-		          <a class="nav-link" href="{{ p.url }}">{{ p.title }}</a>
+		        <li class="nav-item">
+		          <a class="nav-link{% if p.url == page.url %} active{% endif %}" href="{{ p.url }}">{{ p.title }}</a>
 		        </li>
 		        {% endif %}
 	      	{% endif %}
@@ -79,8 +79,8 @@
 	      {% for p in site.pages %}
 	      	{% if p.parent == 'legal' %}
 		        {% if p.weight == weight %}
-		        <li class="nav-item{% if p.url == page.url %} active{% endif %}">
-		          <a class="nav-link" href="{{ p.url }}">{{ p.title }}</a>
+		        <li class="nav-item">
+		          <a class="nav-link{% if p.url == page.url %} active{% endif %}" href="{{ p.url }}">{{ p.title }}</a>
 		        </li>
 		        {% endif %}
 	      	{% endif %}
@@ -89,5 +89,24 @@
 	</ul>
 {% endif %}
 
+
+
+
+
+{% if page.subnav == "loan" %}
+	<ul class="nav nav-tabs m-b-md">
+	    {% for weight in (1..10) %}
+	      {% for p in site.pages %}
+	      	{% if p.parent == 'loan' %}
+		        {% if p.weight == weight %}
+		        <li class="nav-item">
+		          <a class="nav-link {% if p.url == page.url %} active{% endif %}" href="{{ p.url }}">{{ p.title }}</a>
+		        </li>
+		        {% endif %}
+	      	{% endif %}
+	      {% endfor %}
+	    {% endfor %}
+	</ul>
+{% endif %}
 
 
