--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,15 +1,14 @@
 ---
 layout: default
 ---
-<div class="page compact">
+<div class="page compact m-t-lg ">
+
+	<header class="post-header m-t-md">
+		<h1 class="display-4">{{ page.heading }}</h1>
+	</header>
 
 	{% include subnavs.html %}
 
-	<header class="post-header">
-		<h1 class="post-title">{{ page.title }}</h1>
-	</header>
-
-  
 	<div class="page-content">
 		{{ content }}
 	</div>
