designing for homepage, lots of custom lines of CSS

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,4 +1,5 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/min/base-min.js" | prepend: site.baseurl }}"></script>
 <!-- Slick Carousel Documentation http://kenwheeler.github.io/slick/ -->
 <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
