--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
-<nav  class="navstyle navbar navbar-default navbar-fixed-top bg-faded" >
+<nav  class="navbar navbar-naked navbar-fixed-top bg-faded" >
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-open" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -12,7 +12,7 @@
       </a>
     </div>
 
-    <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse navbar-right" id="nav-open">
 
       <ul class="nav navbar-nav">
 
