--- a/_sass/bootstrap/bootstrap/_type.scss
+++ b/_sass/bootstrap/bootstrap/_type.scss
@@ -49,7 +49,12 @@ h2, .h2 { font-size: $font-size-h2; }
 h3, .h3 { font-size: $font-size-h3; }
 h4, .h4 { font-size: $font-size-h4; }
 h5, .h5 { font-size: $font-size-h5; }
-h6, .h6 { font-size: $font-size-h6; }
+h6, .h6 {
+  font-size: $font-size-h5;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: ($font-size-h5 * 0.1);  
+}
 
 
 // Body text
