--- a/_sass/project-flamingo.scss
+++ b/_sass/project-flamingo.scss
@@ -18,27 +18,198 @@ body {
 
 .hero {
   &-home {
-    background-color: $brand-primary;
+    //background-color: $brand-primary;
     position: relative;
     display: inline-table;
-    height: 50vh;
-    width: 100%;
+    height: 70vh;
+    width: 100vw;
+  }
 
-    span.hero-copy {
-      display: table-cell;
-      vertical-align: middle;
-      margin: 0 auto;
-    }
+  span.hero-copy {
+    display: table-cell;
+    vertical-align: middle;
+  }
 
-    h1 {
-      font-weight: 300;
-      height: auto;
-    }
-
+  h1 {
+    font-weight: 300;
+    height: auto;
   }
 }
 
+.stories-panel-group {
+  $stories-panel-height: 60vh;
+  $stories-panel-max-height: 60vw;
+  height: $stories-panel-height;
+  max-height: $stories-panel-max-height;
+  position: relative;
 
+  .panel-story  {
+    height: 100%;
+    border: none;
+    box-shadow: none;
+    border-radius: 0;
+    margin: 0;
+    padding: 0;
+
+    &:hover {
+      $panel-hover-offset: 1em;
+      .panel-story-inner {
+        height: calc(100% + #{$panel-hover-offset * 2});
+        width: calc(100% + #{$panel-hover-offset * 2});
+        top: -$panel-hover-offset;
+        right: -$panel-hover-offset;
+        bottom: -$panel-hover-offset;
+        left: -$panel-hover-offset;
+        border-radius: #{$panel-hover-offset * 0.25};
+        transition: all 0.3s $cubic;
+        z-index: 2;
+      }
+      // .panel-story-inner {
+      //   transform: scale(1.05);
+      //   z-index: 2;
+      // }
+      .story-upper {
+        // height: calc(#{($stories-panel-height * 0.84)} + #{$panel-hover-offset * 2});
+        // max-height: calc(#{($stories-panel-max-height * 0.84)} + #{$panel-hover-offset * 2});
+        height: ($stories-panel-height * 0.6);
+        max-height: ($stories-panel-max-height * 0.6);
+      }
+      .story-lower {
+        height: calc(#{($stories-panel-height * 0.4)} + #{$panel-hover-offset * 2});
+        max-height: calc(#{($stories-panel-max-height * 0.4)} + #{$panel-hover-offset * 2});
+        h6 {
+          color: white;
+          margin: (($stories-panel-height * 0.16) / 2.2) 0 1.5em;
+        }
+      }
+      &:nth-child(1) {
+        .story-lower {
+          background-color: $brand-primary;
+        }
+      }
+      &:nth-child(2) {
+        .story-lower {
+          background-color: $brand-pink;
+        }
+      }
+      &:nth-child(3) {
+        .story-lower {
+          background-color: $brand-orange;
+        }
+      }
+    }
+
+    &-inner {
+      background-color: rgba($brand-primary, 1);
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: 0;
+      transition: all 0.3s $cubic;
+      overflow: hidden;
+
+      span {
+        margin: 0;
+        padding: 0;
+      }
+    }
+
+    &:nth-child(1) {
+      .panel-story-inner {
+        background-color: rgba($brand-primary, 1);
+      }
+      h6 {
+        color: $brand-primary;
+      }
+    }
+
+    &:nth-child(2) {
+      .panel-story-inner {
+        background-color: rgba($brand-pink, 1);
+      }
+      h6 {
+        color: $brand-pink;
+      }
+    }
+
+    &:nth-child(3) {
+      .panel-story-inner {
+        background-color: rgba($brand-orange, 1);
+      }
+      h6 {
+        color: $brand-orange;
+      }
+    }
+
+    .story-bkg {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-size: cover;
+      z-index: -1;
+      opacity: .5;
+    }
+
+    .story-upper, .story-lower {
+      display: block;
+      z-index: 1
+    }
+
+    .story-upper {
+      width: 100%;
+      height: ($stories-panel-height * 0.84);
+      max-height: ($stories-panel-max-height * 0.84);
+      display: inline-table;
+      transition: all 0.4s $cubic;
+
+      h2 {
+        display: table-cell;
+        vertical-align: middle;
+        text-align: center;
+        font-weight: 300;
+        color: white;
+        width: 100%;
+        margin: 0;
+        padding: 0 !important;
+
+      }
+    }
+
+    .story-lower {
+      position: absolute;
+      bottom: 0;
+      left: -10px;
+      right: -10px;
+      background-color: white;
+      width: calc(100% + 20px);
+      height: ($stories-panel-height * 0.16);
+      max-height: ($stories-panel-max-height * 0.16);
+      transition: all 0.4s $cubic;
+      overflow: hidden;
+
+      h6 {
+        margin: (($stories-panel-height * 0.16) / 2.2) 0;
+        transition: all 0.4s $cubic;
+      }
+
+      p, a {
+        color: white;
+      }
+    }
+
+    .story-lower .story-text-wrap {
+      text-align: center;
+      max-width: 25vw;
+      margin: 0 auto;
+    }
+  }
+}
 
 
 // Footer
