--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,12 +16,31 @@
 
       <ul class="nav navbar-nav">
 
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Payoff Products <span class="caret"></span></a>
+          <ul class="dropdown-menu dropdown-menu-left">
+            <li><a href="{{ site.baseurl }}/payoff-products/">Product Overview</a></li>
+            <li role="separator" class="divider"></li>
+            {% for weight in (1..10) %}
+              {% for p in site.pages %}
+                {% if p.parent == 'payoff-products' %}
+                  {% if p.weight == weight %}
+                  <li>
+                    <a href="{{ p.url }}">{{ p.title }}</a>
+                  </li>
+                  {% endif %}
+                {% endif %}
+              {% endfor %}
+            {% endfor %}
+          </ul>
+        </li>
+
         {% comment %}
           Pages ordered in nav by weight number in front-matter
           Ordered left to right starting with "1"
         {% endcomment %}
 
-        {% for weight in (1..10) %}
+        {% for weight in (2..10) %}
           {% for p in site.pages %}
             {% if p.parent == 'index' %}
               {% if p.weight == weight %}
