--- a/_sass/project-styles/custom-bootstrap/_variables.scss
+++ b/_sass/project-styles/custom-bootstrap/_variables.scss
@@ -906,4 +906,5 @@ $hr-border:                   $gray-lighter !default;
 
 
 
-$cubic: cubic-bezier(0.215, 0.61, 0.355, 1)
+$cubic: cubic-bezier(0.215, 0.61, 0.355, 1);
+$helium: cubic-bezier(0.575, 0.005, 0.000, 1.645);
