--- a/_sass/project-styles/_homepage.scss
+++ b/_sass/project-styles/_homepage.scss
@@ -3,41 +3,60 @@
 
 .hero {
   margin: 0;
+  position: relative;
+  display: inline-table;
+  width: 100%;
 
   &-page {
-    position: relative;
-    display: inline-table;
-    height: 40vh;
     min-height: 25vw;
+    height: 40vh;
     max-height: 40vh;
-    width: 100%;
 
     @media (min-width: 1400px) {
-      height: 35vh;
       min-height: 20vw;
+      height: 35vh;
       max-height: 35vh;
     }
   }
 
   &-home {
-    //background-color: $brand-primary;
-    position: relative;
-    display: inline-table;
-    height: 70vh;
     min-height: 55vw;
+    height: 70vh;
     max-height: 70vh;
-    width: 100%;
 
     @media (min-width: 1400px) {
-      height: 65vh;
       min-height: 50vw;
+      height: 65vh;
       max-height: 65vh;
+    }
+  }
+
+  &-section {
+    min-height: 50vw;
+    height: 65vh;
+    max-height: 65vh;
+
+    @media (min-width: 1400px) {
+      min-height: 45vw;
+      height: 60vh;
+      max-height: 60vh;
     }
   }
 
   span.hero-copy {
     display: table-cell;
     vertical-align: middle;
+
+    &.narrow {
+      width: 100%;
+
+      @media (min-width: $screen-sm) {
+        width: 75%;
+      }
+      @media (min-width: $screen-md) {
+        width: 50%;
+      }
+    }
   }
 
   h1 {
@@ -166,14 +185,20 @@ $panel-hover-offset: 1em;
     }
 
     .thumb-lower {
+
+      @media (min-width: $screen-md) {
+        height: ($stories-panel-height * 0.16);
+        max-height: ($stories-panel-max-height * 0.16);
+      }
+
       position: absolute;
       bottom: 0;
       left: -10px;
       right: -10px;
       background-color: white;
       width: calc(100% + 20px);
-      height: ($stories-panel-height * 0.16);
-      max-height: ($stories-panel-max-height * 0.16);
+      height: ($stories-panel-height * 0.276);
+      max-height: ($stories-panel-max-height * 0.276);
       transition: all 0.4s $cubic;
       overflow: hidden;
 
@@ -242,8 +267,13 @@ $panel-hover-offset: 1em;
 
 //This is for the two panels in the "Difference" section tabs
 .thumb-panel-group-difference {
-  height: $difference-panel-height;
-  max-height: $difference-panel-max-height;
+  height: ($difference-panel-height * 2);
+  max-height: ($difference-panel-max-height * 2);
+
+  @media (min-width: $screen-sm) {
+    height: $difference-panel-height;
+    max-height: $difference-panel-max-height;
+  }
 
   // "panel-thumb" for "thumb-panel-group-difference"
   .panel-thumb {
@@ -309,6 +339,7 @@ $panel-hover-offset: 1em;
   .thumb-text-center {
     width: 100%;
     height: 100%;
+    padding: 1.25em;
     display: inline-table;
     position: relative;
     transition: all 0.4s $cubic;
