--- a/css/base.scss
+++ b/css/base.scss
@@ -16,7 +16,10 @@
         "project-styles/custom-bootstrap/panels",
         "project-styles/custom-bootstrap/utilities-spacing",
         //custom styles
+        // "project-styles/debug", //for box-model debuging
+        "project-styles/layout",
         "project-styles/homepage",
         "project-styles/type",
-        "project-styles/base"
+        "project-styles/nav",
+        "project-styles/footer"
 ;
