--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav  class="navbar navbar-naked navbar-fixed-top bg-faded" >
   <div class="container-fluid">
-    <div class="navbar-header">
+    <div class="navbar-header col-sm-1">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-open" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -12,7 +12,7 @@
       </a>
     </div>
 
-    <div class="collapse navbar-collapse navbar-right" id="nav-open">
+    <div class="collapse navbar-collapse col-sm-11 navbar-right main-nav" id="nav-open">
 
       <ul class="nav navbar-nav">
 
@@ -60,5 +60,10 @@
 
     </div>
 
+    {% include pagenavs.html %}
+
   </div>
+
+
+
 </nav>
