--- a/css/base.scss
+++ b/css/base.scss
@@ -17,6 +17,7 @@
         "project-styles/custom-bootstrap/utilities-spacing",
         //custom styles
         // "project-styles/debug", //for box-model debuging
+        "project-styles/button",
         "project-styles/layout",
         "project-styles/homepage",
         "project-styles/type",
